--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <title>StepWise® Learning Platform</title>
 </head>
 <body>
+   <div class="body_container">
     <!-- Header -->
-    <header class="container header">
+    <header class="header_container">
         <nav class="nav">
             <div class="logo">
                 <h2>StepWise</h2>
@@ -24,7 +25,7 @@
                 </button>
                 <ul class="nav_menu_list">
                     <li class="nav_menu_item">
-                        <a href="#" class="nav_menu_link">About</a>
+                        <a href="about/about.html" class="nav_menu_link">About</a>
                     </li>
                     <li class="nav_menu_item">
                         <a href="#" class="nav_menu_link">The Idea</a>
@@ -66,7 +67,7 @@
     </div>
 </section>
 <!-- Idea Section -->
-<section class="wrapper">
+<section class="wrapper" id="idea_wrapper">
     <div class="container">
         <div class="grid-cols-3">
             <div class="grid-col-item">
@@ -104,9 +105,10 @@
         </div>
     </div>
 </section>
-<footer></footer>
+<footer><h6>Copyright StepWise® 2022</h6></footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script src="./script.js"></script>
+</div>
 </body>
 </html>
